[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://plants/ui/script/plant_tooltip.gd" type="Script" id=2]
[ext_resource path="res://young_plants/ui/texture/young_plant-lvl-up-icon.png" type="Texture" id=3]
[ext_resource path="res://young_plants/ui/texture/young_plant-empty-bar.png" type="Texture" id=4]
[ext_resource path="res://young_plants/ui/texture/young_plant-grow-bar.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.6, 0.6, 0.6, 0.2 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="PlantTooltip" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 14.0
margin_bottom = 14.0
rect_scale = Vector2( 0.7, 0.7 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 121.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlantName" type="Label" parent="PanelContainer/TooltipContainer"]
margin_right = 116.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 0.968627, 0.803922, 1 )
custom_fonts/font = SubResource( 1 )
text = "Carrot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HarvestTimeLeft" type="Label" parent="PanelContainer/TooltipContainer"]
margin_top = 17.0
margin_right = 116.0
margin_bottom = 30.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
custom_fonts/font = SubResource( 1 )
text = "Harvest left: 9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HarvestMeter" type="HBoxContainer" parent="PanelContainer/TooltipContainer"]
margin_top = 34.0
margin_right = 116.0
margin_bottom = 49.0
alignment = 1

[node name="HarvestMeterIcon" type="TextureRect" parent="PanelContainer/TooltipContainer/HarvestMeter"]
margin_right = 12.0
margin_bottom = 15.0
rect_min_size = Vector2( 12, 15 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="HarvestTimeLeft2" type="Label" parent="PanelContainer/TooltipContainer/HarvestMeter"]
margin_left = 16.0
margin_right = 52.0
margin_bottom = 15.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
custom_fonts/font = SubResource( 1 )
text = "H. Time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HarvestMeterBar" type="TextureProgress" parent="PanelContainer/TooltipContainer/HarvestMeter"]
margin_left = 56.0
margin_right = 116.0
margin_bottom = 15.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="HarvestMeterTimeLeft" type="Label" parent="PanelContainer/TooltipContainer/HarvestMeter/HarvestMeterBar"]
margin_left = -8.0
margin_right = 72.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "100/100"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
